# rustylogs

./: .gitignore  Cargo.toml  README.md
docs/: 2025-02.html  2025-03.html  2025-04.html  index.html
example/: report.html  report.json
src/: github.rs  main.rs  strip_ansi.rs
