[package]
name = "rustylogs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
jiff = "0.2.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

[features]
# Caches the full logs. Not recommended, partly because it's not fully implemented yet.
# But also because it'd be like gigabytes of logs if you download a month's worth.
download_full_logs = []

[profile.dev]
# The code is super unoptimised so...
opt-level = 1
# (tbh you probably should just run it with --release)
